# report_overdue_charges_rs

./: Cargo.toml
src/: charge_processor.rs  main.rs  sheet_updater.rs
src/utils/: mod.rs
src/utils/api/: mod.rs
src/utils/api/asaas/: asaas_structs.rs  client.rs  mod.rs
src/utils/api/config/: api_key.rs  mod.rs  whatsapp_key.rs
src/utils/api/omie/: client.rs  mod.rs  omie_structs.rs
src/utils/api/sheets/: client.rs  mod.rs
src/utils/api/whatsapp/: client.rs
src/utils/functions/: clear_terminal.rs  format_phone_number.rs  get_current_date.rs  mod.rs  process_single_charge.rs  try_until_wokrs.rs  try_until_works.rs
