[package]
name = "report_overdue_charges"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
chrono-tz = "0.10.3"
rand = "0.8"

[dev-dependencies]
mockall = "0.13.1"
tokio-test = "0.4"